# the-farmer-was-replaced

./: .gitignore  .mise.toml  pyproject.toml
.devcontainer/: devcontainer.json
src/: c.py  cactus.py  f0.py  main.py  maze.py  movement.py  parallel.py  polycultures.py  pumpkins.py  snake.py  sunflowers.py  tile.py
